# zephyr_app_base

./: CMakeLists.txt  README.md  prj.conf
src/: main.c
